# Drawback_Chess_Rust2

./: .gitignore  Cargo.toml  DrawbackChess_overview.txt  LICENSE  README.md  fix_features.ps1
.cargo/: config.toml
.cursor/mcp-server/: mcp.json  package-lock.json  package.json  server.js
.cursor/rules/: preferences.mdc
.llm-context/: config.yaml
assets/pleco/src/bots/: jamboree.rs  mod.rs
assets/pleco/src/tools/: mod.rs
src/: engine.rs  main.rs
