[package]
name = "drawback-chess2"
version = "0.1.0"
edition = "2021"

[dependencies]
mpsc = "*"
num-traits = "*"
# bitintr = "*"
eframe = { version = "*", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "*", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[features]
drawbackChessDebug = []

