[package]
name = "drawback-chess2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Added pleco as a local dependency
pleco = { path = "assets/pleco" }

mpsc = "*"
num-traits = "*"
# bitintr = "*"
eframe = "0.27.2"

# For image support:
egui_extras = { version = "0.27", features = ["image"] }

# env_logger = { version = "0.10", default-features = false, features = [
#     "auto-color",
#     "humantime",
# ] }

rand = "0.8"
once_cell = "1.19" # Added for lazy static initialization

[profile.release]
opt-level = 2 # fast and small wasm

[features]
drawbackChessDebug = []

